# dmcp

./: Cargo.toml  MCP-REGISTRY-GUIDE.md  PKGBUILD  Plan.md  README.md  manifest.json.example  multicommand-system.md  registry.json.example  structure.txt
docs/: LLM-INTEGRATION.md
src/: browse.rs  call.rs  connect.rs  discovery.rs  elevation.rs  install.rs  lib.rs  main.rs  models.rs  orchestrator.rs  paths.rs  run.rs  serve.rs  setup.rs  sources.rs  transport.rs
