[package]
name = "dmcp"
version = "0.1.0"
edition = "2021"
description = "MCP Manager - discover, manage, and invoke MCP servers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
nix = { version = "0.29", default-features = false, features = ["user"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.16", features = ["server", "client", "transport-io", "transport-child-process", "macros", "schemars", "transport-streamable-http-client-reqwest"] }
schemars = "1"
